feat: Phase 11 - Settings & Preferences Complete
- Enhanced settings-store with 8 new settings (zoom, view mode, save location, startup, performance, privacy)
- Created shortcuts-store with 18 customizable keyboard shortcuts
- Created favorites-store for starring files
- Created collections-store for virtual folders
- Created tags-store for file label system
- Created search-store with search history
- Created ShortcutsCustomization.tsx with conflict detection
- Created GeneralSettingsTab.tsx with all new settings
- Created MetadataEditorDialog.tsx for PDF metadata editing
- Added 140+ translation keys (EN/ID) for all new features

--- a/src/renderer/i18n/locales/en.json
+++ b/src/renderer/i18n/locales/en.json
@@ -248,12 +248,87 @@
     "pdfDefaults": "PDF Defaults",
     "defaultZoom": "Default Zoom",
     "defaultView": "Default View",
+    "defaultViewMode": "Default View Mode",
+    "viewSingle": "Single Page",
+    "viewContinuous": "Continuous Scroll",
+    "viewFacing": "Facing Pages",
     "singlePage": "Single Page",
     "continuous": "Continuous",
     "twoPage": "Two Page",
     "reset": "Reset to Defaults",
     "saved": "Settings saved",
-    "ai": "AI"
+    "ai": "AI",
+    "saveLocation": "Default Save Location",
+    "selectSaveFolder": "Select Default Save Folder",
+    "notSet": "Not set (will ask each time)",
+    "browse": "Browse",
+    "startup": "Startup",
+    "reopenLastFile": "Reopen last file on startup",
+    "performance": "Performance",
+    "cacheSize": "Cache Size",
+    "maxMemory": "Max Memory Usage",
+    "privacy": "Privacy",
+    "clearRecentOnExit": "Clear recent files on exit",
+    "shortcuts": {
+      "title": "Keyboard Shortcuts",
+      "navigation": "Navigation",
+      "zoom": "Zoom",
+      "view": "View",
+      "file": "File",
+      "edit": "Edit",
+      "resetAll": "Reset All",
+      "customized": "customized",
+      "pressKey": "Press key...",
+      "conflict": "Conflict!",
+      "hint": "Click the edit button to customize a shortcut. Press Escape to cancel."
+    }
+  },
+  "favorites": {
+    "title": "Favorites",
+    "add": "Add to Favorites",
+    "remove": "Remove from Favorites",
+    "empty": "No favorites yet",
+    "hint": "Star files to quickly access them here"
+  },
+  "collections": {
+    "title": "Collections",
+    "create": "Create Collection",
+    "edit": "Edit Collection",
+    "delete": "Delete Collection",
+    "name": "Collection Name",
+    "color": "Color",
+    "empty": "No collections yet",
+    "addFile": "Add to Collection",
+    "removeFile": "Remove from Collection"
+  },
+  "tags": {
+    "title": "Tags",
+    "create": "Create Tag",
+    "edit": "Edit Tag",
+    "delete": "Delete Tag",
+    "name": "Tag Name",
+    "color": "Color",
+    "assign": "Assign Tag",
+    "unassign": "Remove Tag",
+    "empty": "No tags yet"
+  },
+  "metadata": {
+    "title": "Edit PDF Metadata",
+    "docTitle": "Title",
+    "author": "Author",
+    "subject": "Subject",
+    "keywords": "Keywords",
+    "titlePlaceholder": "Document title",
+    "authorPlaceholder": "Author name",
+    "subjectPlaceholder": "Document subject or description",
+    "keywordsPlaceholder": "keyword1, keyword2, keyword3",
+    "keywordsHint": "Separate keywords with commas",
+    "info": "Document Information",
+    "creator": "Creator",
+    "producer": "Producer",
+    "created": "Created",
+    "modified": "Modified",
+    "unknown": "Unknown"
   },
   "about": {
     "title": "About PDF Kit",
