--- a/src/renderer/i18n/locales/id.json
+++ b/src/renderer/i18n/locales/id.json
@@ -248,12 +248,87 @@
     "pdfDefaults": "Default PDF",
     "defaultZoom": "Zoom Default",
     "defaultView": "Tampilan Default",
+    "defaultViewMode": "Mode Tampilan Default",
+    "viewSingle": "Halaman Tunggal",
+    "viewContinuous": "Gulir Berkelanjutan",
+    "viewFacing": "Halaman Berhadapan",
     "singlePage": "Halaman Tunggal",
     "continuous": "Berkelanjutan",
     "twoPage": "Dua Halaman",
     "reset": "Reset ke Default",
     "saved": "Pengaturan tersimpan",
-    "ai": "AI"
+    "ai": "AI",
+    "saveLocation": "Lokasi Simpan Default",
+    "selectSaveFolder": "Pilih Folder Simpan Default",
+    "notSet": "Belum diatur (akan ditanya setiap kali)",
+    "browse": "Telusuri",
+    "startup": "Startup",
+    "reopenLastFile": "Buka ulang file terakhir saat startup",
+    "performance": "Performa",
+    "cacheSize": "Ukuran Cache",
+    "maxMemory": "Maksimal Penggunaan Memori",
+    "privacy": "Privasi",
+    "clearRecentOnExit": "Hapus file terbaru saat keluar",
+    "shortcuts": {
+      "title": "Pintasan Keyboard",
+      "navigation": "Navigasi",
+      "zoom": "Zoom",
+      "view": "Tampilan",
+      "file": "File",
+      "edit": "Edit",
+      "resetAll": "Reset Semua",
+      "customized": "diubah",
+      "pressKey": "Tekan tombol...",
+      "conflict": "Konflik!",
+      "hint": "Klik tombol edit untuk mengubah pintasan. Tekan Escape untuk membatalkan."
+    }
+  },
+  "favorites": {
+    "title": "Favorit",
+    "add": "Tambah ke Favorit",
+    "remove": "Hapus dari Favorit",
+    "empty": "Belum ada favorit",
+    "hint": "Tandai file untuk akses cepat di sini"
+  },
+  "collections": {
+    "title": "Koleksi",
+    "create": "Buat Koleksi",
+    "edit": "Edit Koleksi",
+    "delete": "Hapus Koleksi",
+    "name": "Nama Koleksi",
+    "color": "Warna",
+    "empty": "Belum ada koleksi",
+    "addFile": "Tambah ke Koleksi",
+    "removeFile": "Hapus dari Koleksi"
+  },
+  "tags": {
+    "title": "Tag",
+    "create": "Buat Tag",
+    "edit": "Edit Tag",
+    "delete": "Hapus Tag",
+    "name": "Nama Tag",
+    "color": "Warna",
+    "assign": "Tetapkan Tag",
+    "unassign": "Hapus Tag",
+    "empty": "Belum ada tag"
+  },
+  "metadata": {
+    "title": "Edit Metadata PDF",
+    "docTitle": "Judul",
+    "author": "Penulis",
+    "subject": "Subjek",
+    "keywords": "Kata Kunci",
+    "titlePlaceholder": "Judul dokumen",
+    "authorPlaceholder": "Nama penulis",
+    "subjectPlaceholder": "Subjek atau deskripsi dokumen",
+    "keywordsPlaceholder": "katakunci1, katakunci2, katakunci3",
+    "keywordsHint": "Pisahkan kata kunci dengan koma",
+    "info": "Informasi Dokumen",
+    "creator": "Pembuat",
+    "producer": "Produsen",
+    "created": "Dibuat",
+    "modified": "Dimodifikasi",
+    "unknown": "Tidak diketahui"
   },
   "about": {
     "title": "Tentang PDF Kit",
