feat: Phase 12 - Auto-Update System Complete
- Installed electron-updater and electron-log
- Created auto-updater.service.ts with:
  - Periodic update checks (startup + every 4 hours)
  - Internet connectivity check before update
  - IPC handlers for check/download/install
- Added updater API to preload.ts
- Created UpdateNotification.tsx with:
  - Update banner with status indicators
  - Download progress bar
  - Changelog dialog
  - Install & Restart button
- Integrated auto-updater into main.ts (production only)
- Added updates translations (EN/ID - 15 keys each)
- BUILD VERIFIED: npm run build passed

--- a/src/renderer/i18n/locales/en.json
+++ b/src/renderer/i18n/locales/en.json
@@ -354,6 +354,21 @@
     "credits": "Credits",
     "checkUpdates": "Check for Updates"
   },
+  "updates": {
+    "checking": "Checking for updates...",
+    "available": "Update available",
+    "downloading": "Downloading update",
+    "ready": "Update ready to install",
+    "error": "Update error",
+    "download": "Download",
+    "installRestart": "Install & Restart",
+    "changelog": "Changelog",
+    "changelogTitle": "What's New in v{{version}}",
+    "currentVersion": "Current version",
+    "noNotes": "No release notes available.",
+    "checkNow": "Check for Updates",
+    "upToDate": "You have the latest version"
+  },
   "shortcuts": {
     "title": "Keyboard Shortcuts",
     "search": "Search shortcuts...",
